--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/express": "^4.0.39",
     "@types/graphql": "^0.11.5",
+    "express": "^4.16.2",
+    "graphql": "^0.11.7",
     "typescript": "^2.6.1"
   },
   "devDependencies": {},
