--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.0.39",
+    "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.5",
     "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
     "graphql": "^0.11.7",
     "typescript": "^2.6.1"
   },
