--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.7",
+    "mysql2": "^1.4.2",
+    "sequelize": "^4.22.6",
     "typescript": "^2.6.1"
   },
   "devDependencies": {},
