--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/graphql": "^0.11.5",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "fs": "0.0.1-security",
     "graphql": "^0.11.7",
     "mysql2": "^1.4.2",
+    "path": "^0.12.7",
     "sequelize": "^4.22.6",
     "typescript": "^2.6.1"
   },
