--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.0.39",
     "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.5",
+    "@types/sequelize": "^4.0.79",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "fs": "0.0.1-security",
